# psychology-experiment-reproduce

./: .gitignore  README.md  main.py  pyproject.toml  run_mcp.sh
agent_practice/: hello_world.py  multi_agent.py  multi_agent.toml  util.py
doc/: SKILL.md
example_workspace/: exp_design.md  exp_name.json
example_workspace/demo/: compound_shapes.py  visual_angle_scene.py
example_workspace/paper/: paper.md
example_workspace/util/: __init__.py  data_io.py  vision.py
psychology-experiment-reproduce/: SKILL.md
src/: monkey_patches.py  state.py  summarizer.py  summarizer.toml
test/: prelude.py  test_summarizer.py  test_utils.py
test/test_paper/: paper.md
test/test_paper/data/: Instructions for data and analysis.docx
tests/: test_main.py
